@@ -1,6 +1,6 @@
 {
   "name": "bands-io",
-  "version": "0.4.3",
+  "version": "0.4.4",
   "description": "A real-time online multiplayer CTF shooter game",
   "main": "src/app.js",
   "scripts": {
